# looker-cooker

./: .env.example  .gitignore  README.md  agents.md  marketplace.json  pyproject.toml
.claude-plugin/: plugin.json
.claude/skills/: run-backup.md
looker_backup/: __init__.py  backup.py  cli.py
skills/run-backup/: SKILL.md
